[package]
name = "nianjia-registry"
version = "0.0.1"
edition = "2018"
authors = ["Pengfei Zhang <zpfalpc23@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://nianjia.dev"
repository = "https://github.com/nianjia/nianjia-registry"
description = """
The nianjia package distribution registry  
"""

[lib]
name = "registry"

[dependencies]
clap = "2.33.0"
hyper = "0.12.25"
humantime = "1.2.0"
nianjia = { git = "https://github.com/nianjia/nianjia" }
log = "0.4.6"
http = "0.1.17"
serde = "1.0.90"
serde_yaml = "0.8.8"
